--- a/Raxa-4/resource/english.properties
+++ b/Raxa-4/resource/english.properties
@@ -5,6 +5,6 @@ footer1mode=1
 endingmode=2
 tabletOrVolume=1
 header1Text=Hello
-header2Text=This is your Medicine Reminder,Today you have to take
+header2Text=This is your Medicine Reminder Now you have to take
 footer1Text=Take Care
 endingText=Get Well Soon
