--- a/Raxa-4/resource/hindi.properties
+++ b/Raxa-4/resource/hindi.properties
@@ -1,5 +1,10 @@
 greeting1Text=
+header1=/home/atul/Desktop/record/header
+header2=/home/atul/Desktop/record/header
+footer1=/home/atul/Desktop/record/footer
+ending=/home/atul/Desktop/record/footer
 greeting2Text=
+tabletOrVolume=/home/atul/Desktop/record/type
 footer1Text=
 endingText=
 greeting1Voice=
